# skillz

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.agents/skills/build-scripts/: SKILL.md
.agents/skills/commit-it/: SKILL.md
.agents/skills/commit-it/references/: workflow-example.md
.agents/skills/commit-it/scripts/: checkpoint.sh  validate-scope.sh
.agents/skills/describe-it/: SKILL.md
.agents/skills/dogfood-it/: SKILL.md
.agents/skills/polyglot-scaffold/: SKILL.md
.agents/skills/polyglot-scaffold/references/: architecture.md
.agents/skills/polyglot-scaffold/scripts/: scaffold.py
.agents/skills/polyglot-scaffold/template/: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-workspace.yaml
.agents/skills/polyglot-scaffold/template/.github/workflows/: ci.yml
.agents/skills/polyglot-scaffold/template/src/node-myplaceholder-project/: .prettierignore  Cargo.toml  eslint.config.mjs  package.json  tsconfig.json
.agents/skills/polyglot-scaffold/template/src/node-myplaceholder-project/src/: index.ts  lib.rs
.agents/skills/polyglot-scaffold/template/src/node-myplaceholder-project/test/: echo.test.ts
.agents/skills/polyglot-scaffold/template/src/python-myplaceholder-project/: Cargo.toml  build.rs  pyproject.toml
.agents/skills/polyglot-scaffold/template/src/python-myplaceholder-project/myplaceholder_project/: __init__.py  _core.py
.agents/skills/polyglot-scaffold/template/src/python-myplaceholder-project/src/: lib.rs
.agents/skills/polyglot-scaffold/template/src/python-myplaceholder-project/tests/: test_echo.py
.agents/skills/polyglot-scaffold/template/src/rust-myplaceholder-project/: Cargo.toml
.agents/skills/polyglot-scaffold/template/src/rust-myplaceholder-project/src/: lib.rs
.agents/skills/python-scripts/: SKILL.md
.agents/skills/review-it/: SKILL.md
.agents/skills/sherpa-it/: SKILL.md
.agents/skills/ship-it/: SKILL.md
.agents/skills/test-it/: SKILL.md
.agents/skills/update-claude-config/: SKILL.md
.github/workflows/: ci.yml
hooks/PreToolUse/Bash/: 00_force_push.md
src/skillz/: install.py
tests/: test_install.py  test_skills.py
