[package]
name = "myplaceholder_python_bindings"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "myplaceholder_python_bindings"
crate-type = ["cdylib"]

[dependencies]
myplaceholder_rust_crate = { path = "../rust-myplaceholder-project" }
pyo3 = { version = "0.23", features = ["extension-module"] }
