[project]
name = "myplaceholder_python_pkg"
version = "0.1.0"
requires-python = ">=3.10"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "myplaceholder_project._myplaceholder_project"
python-source = "."
manifest-path = "Cargo.toml"

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "myplaceholder_project._myplaceholder_project"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
